ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: micro-service-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: ""
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: react-service
            port:
              number: 80
  - host: ""
    http:
      paths:
      - pathType: Prefix
        path: "/todo"
        backend:
          service:
            name: node-todo-service
            port:
              number: 80
